# binary-diff-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: cli.rs  lib.rs  main.rs  tui.rs
src/binary_diff/: binary_diff_chunk.rs  error.rs  mod.rs  result.rs
src/binary_diff/algorithm/: get_delete_chunk.rs  get_insert_chunk.rs  get_same_chunk.rs  introduce_replace_chunk.rs  mod.rs
src/binary_diff/helper/: find.rs  get_buffer_length.rs  mod.rs  read_bytes.rs  read_one_byte.rs
src/binary_diff_analyzer/: derives_from.rs  error.rs  mod.rs  result.rs
src/util/: event.rs
tests/samples/binary/crash-minimization/: crash-235641cefe524570bf0df6a3b3722535ce2dbbf7  minimized-from-10dad543216eabe6d97b9d0ba8459215f6dca3f3
