[package]
name = "binary-diff"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "binary-diff"
path = "src/cli.rs"
required-features = ["bin"]

[features]
bin = ["clap", "env_logger"]

[dependencies]
### Logging
log = "0.4.14"
env_logger = { version = "0.9.0", optional = true }

bcmp = "0.4.1"

clap = { version = "2.33.3", optional = true }