[package]
name = "binary-diff"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "binary-diff"
path = "src/cli.rs"
required-features = ["bin"]

[[bin]]
name = "binary-diff-tui"
path = "src/tui.rs"
required-features = ["bin"]

[features]
bin = ["env_logger", "clap", "tui", "termion"]
tests = ["env_logger"]

[dependencies]
### Logging
log = "0.4.14"
env_logger = { version = "0.9.0", optional = true }

bcmp = "0.4.1"

### CLI
clap = { version = "2.33.3", optional = true }

### TUI
tui = { version = "0.16.0", optional = true }
termion = { version = "1.5.6", optional = true }

[dev-dependencies]
env_logger = "0.9.0"